--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,6 @@
 @import-normalize;
 @import 'recipe-list.css';
+@import 'font.css';
 
 *, *::before, *::after {
   font-family: Gotham Rounded, sans-serif;
