--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,6 +2,7 @@
 @import 'recipe-list.css';
 @import 'font.css';
 @import 'buttons.css';
+@import 'recipe.css';
 
 *, *::before, *::after {
   font-family: Gotham Rounded, sans-serif;
@@ -14,4 +15,8 @@ html {
 body {
   padding: 0;
   margin: 0;
+}
+
+.mr-1 {
+  margin-right: 5px;
 }
