--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,7 @@
 @import 'font.css';
 @import 'buttons.css';
 @import 'recipe.css';
+@import 'ingredient-list.css';
 
 *, *::before, *::after {
   font-family: Gotham Rounded, sans-serif;
